---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1060                                 -
---------------------------------------------
- 2020-12-27                                -
---------------------------------------------
.: WSM: Task: Style the font weight and adjust invoice size (WSW-94)

---------------------------------------------
- 2020-12-27                                -
---------------------------------------------
.: WSM: Task: Mark order as self-pickup (WSM-257)
.: WSW: Task: Rename order to invoice (WSW-94)

---------------------------------------------
- 2020-12-26                                -
---------------------------------------------
.: WSW: Feature: Invoice Module (WSW-94)
.: WSM: Task: Prevent receiptId got brute force and customer information being exposed (WSW-98)

- v1.0.1050                                 -
---------------------------------------------
- 2020-12-06                                -
---------------------------------------------
.: WSW: Task: Update twitter meta (WSW-84)
.: WSM: Task: Update autocomplete api (WSW-93)

---------------------------------------------
- 2020-12-05                                -
---------------------------------------------
.: WSW: Task: Create Buildbot (WSW-84)

---------------------------------------------
- 2020-12-04                                -
---------------------------------------------
.: WSW: Task: Update SEO (WSW-38)

---------------------------------------------
- 2020-12-03                                -
---------------------------------------------
.: WSW: Task: Change Icon (WSW-89)

---------------------------------------------
- 2020-11-17                                -
---------------------------------------------
.: WSW: Task: Share QR code with social media (WSW-38)

---------------------------------------------
- 2020-11-16                                -