@@ -46,3 +46,4 @@ testem.log
 Thumbs.db
 .openode
 seo/routes.json
+seo/routes.txt
