@@ -4,6 +4,11 @@
 
 - v1.0.1060                                 -
 ---------------------------------------------
+- 2020-01-03                                -
+---------------------------------------------
+.: WSM: Task: Update currencyService (WSW-94)
+
+---------------------------------------------
 - 2020-12-27                                -
 ---------------------------------------------
 .: WSM: Task: Style the font weight and adjust invoice size (WSW-94)
